Updates from Overleaf

--- a/doc/sections/abstract.tex
+++ b/doc/sections/abstract.tex
@@ -3,7 +3,9 @@
 \begin{document}
 
 \begin{abstract}
+In this project a variety of datasets have been analysed using a feed forward neural network, and logistic regression. The datasets analyzed is a dataset produced by the franke function, the MNIST dataset consisting of 60.000 images for training networks and the Wisconsin cancer dataset... Continue here please
 
+The logistic regression seemed to be quiet reliable with an accuracy score of 96.5\% when applied to the Wisconsin dataset. Scikit-learn had an accuracy score of 98.2\%, which is only 1.7\% higher.
 \end{abstract}
 
 \end{document}
