--- a/doc/sections/conclusion.tex
+++ b/doc/sections/conclusion.tex
@@ -2,6 +2,17 @@
 
 \begin{document}
 \section{Conclusion}
+The aim of this work was to gain a further understanding of machine learning concepts and tools by studying logistic regression along with a feed forward neural network. 
 \subsection{Classification}
+After applying the logistic regression model and and the feed forward neural network on the different classification datasets, we conclude that the neural network need a bit more fine tuning to give satisfactory results for classification cases, while the logistic regression model gives quiet presentable results.
 \subsection{Regression}
+Regarding the regression, the OLS and Ridge method seem to be the best methods when solving regression cases. This might not always be the case in view of the fact that the feed forward neural network has some elbow room for optimization.
+
+\subsection{Prospect for the future}
+The main prospect for the future would of course be to fine tune the neural network and try out even more neurons and hidden layers as far as the computing power approves it.
+
+An interesting prospect for the future could also be to try these methods on more complicated and larger datasets, to see how they fare in other scenarios.
+
+The future work of the logistic regression model would naturally be to push the accuracy score even closer towards the 100\%.
+
 \end{document}
