Updates from Overleaf

--- a/doc/sections/abstract.tex
+++ b/doc/sections/abstract.tex
@@ -3,9 +3,9 @@
 \begin{document}
 
 \begin{abstract}
-In this project a variety of datasets have been analysed using a feed forward neural network, and logistic regression. The datasets analyzed is a dataset produced by the franke function, the MNIST dataset consisting of 60.000 images for training networks and the Wisconsin cancer dataset... Continue here please
+This report considers a couple of datasets, namely the MNIST set of handwritten digits, the Wisconsin cancer dataset and a set generated from Franke's function. These have been analysed by utilizing our own feed-forward neural network, and logistic regression. For comparison, some parts use implementations from \verb|scikit-learn| as well. The goal of this report is to study regression and classification problems, and to compare the performance of a neural network against more classic regression methods - as explored in Project 1.
 
-The logistic regression seemed to be quiet reliable with an accuracy score of 96.5\% when applied to the Wisconsin dataset. Scikit-learn had an accuracy score of 98.2\%, which is only 1.7\% higher.
+The logistic regression seems reliable, with an accuracy score only slightly lower than the one produced by \verb|scikit-learn|. The regression results of the neural network proved adequate at best, and its classification of the MNIST digits turned out unsatisfactory. Its here worth noting that we were hard pressed with time and that these results would most definitely be improved if we were able to further explore the best network structure for the task at hand, and to analyze its performance.
 \end{abstract}
 
 \end{document}
