Updates from Overleaf

--- a/doc/sections/introduction.tex
+++ b/doc/sections/introduction.tex
@@ -8,5 +8,5 @@ Regression problems is the other group of supervised learning. Both classificati
 
 The purpose of this work is to gain an increased understanding of machine learning applications by studying both classification and regression problems. Thus, we develop a feed forward neural network (FFNN) code, and we also include logistic regression for the classification problems. The methods will be tested on the MNIST dataset. In addition we use FFNN to fit a data set generated using Franke’s function. The results of the analysis on the Franke's function dataset will be compared to the results of our previous work on regression methods \cite{project1}. 
 
-This report is divided into x parts. First we review some important concepts ... Last, a critical evaluation of the various algorithms will be given. 
+First, we review some important concepts needed to comprehend the discussion. Then, we briefly present how we have implemented the methods and present our results.  Last, a critical evaluation of the various algorithms will be given. 
 \end{document}
